Fixed sizes on digit boxes on smaller screens

--- a/style.css
+++ b/style.css
@@ -1,154 +1,168 @@
 :root {
-    --transparent: oklch(0 0 0 / 0%);
-    --purple-100: oklch(0.86 0.08 280);
-    --purple-200: oklch(0.82 0.06 280);
-    --purple-300: oklch(0.71 0.12 280);
-    --purple-400: oklch(0.61 0.18 280);
-    --purple-500: oklch(0.5 0.21 280);
-    --purple-600: oklch(0.42 0.18 280);
-    --purple-800: oklch(0.25 0.15 280);
-    --purple-900: oklch(0.13 0.06 280);
-  }
-
-*{
-    box-sizing: border-b    ox;
-}
-body{
-    padding: 0;
-    margin: 0;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-color: #05031e;
+  --transparent: oklch(0 0 0 / 0%);
+  --purple-100: oklch(0.86 0.08 280);
+  --purple-200: oklch(0.82 0.06 280);
+  --purple-300: oklch(0.71 0.12 280);
+  --purple-400: oklch(0.61 0.18 280);
+  --purple-500: oklch(0.5 0.21 280);
+  --purple-600: oklch(0.42 0.18 280);
+  --purple-800: oklch(0.25 0.15 280);
+  --purple-900: oklch(0.13 0.06 280);
 }
 
-main{
-    max-width: 94dvw;
-    width: 100ch;
-    min-height: 96dvh;
-    margin: 0 auto;
-    padding: 1rem 0.5rem;
-    /* background-color: snow; */
-    background-color: #05031e;
-    color: var(--purple-300);
-    box-shadow: 0px 0px 6px #e5e5e5;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+* {
+  box-sizing: border-b ox;
+}
+body {
+  padding: 0;
+  margin: 0;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  background-color: #05031e;
 }
 
-.tall{
-    display: flex;
-    margin: 2rem 0;
-    position: relative;
+main {
+  max-width: 94dvw;
+  width: 100ch;
+  min-height: 96dvh;
+  margin: 0 auto;
+  padding: 1rem 0.5rem;
+  /* background-color: snow; */
+  background-color: #05031e;
+  color: var(--purple-300);
+  box-shadow: 0px 0px 6px #e5e5e5;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-.siffer{
-    width: 10dvw;
-    height: 10dvw;
-    max-width: 100px;
-    max-height: 100px;
-    
-    margin: 0 .5rem;
-    font-size: 2rem;
-    text-align: center; 
-}
-.indicator{
-    display: inline;
-    height: 10dw;
-    max-height: 100px;
-    position: absolute;
-    right: -50px;
-    top: 50%;
-    transform: translateY(-50%) scale(0.5);
-    fill: var(--purple-100);
+.tall {
+  display: flex;
+  margin: 2rem 0;
+  position: relative;
 }
 
-.hidden{
-    display: none;
+.siffer {
+  width: 10dvw;
+  height: 10dvw;
+  max-width: 100px;
+  max-height: 100px;
+
+  margin: 0 0.5rem;
+  font-size: 2rem;
+  text-align: center;
+}
+.indicator {
+  display: inline;
+  height: 10dw;
+  max-height: 100px;
+  position: absolute;
+  right: -50px;
+  top: 50%;
+  transform: translateY(-50%) scale(0.5);
+  fill: var(--purple-100);
+}
+
+.hidden {
+  display: none;
 }
 
 .button {
-    position: relative;
-    z-index: 1;
-    background: var(--purple-900);
-    border: 3px solid;
-    border-color: var(--purple-400);
-    border-radius: 0.75rem;
-    color: var(--purple-300);
-    padding: 0.75rem 1rem;
-    text-decoration: none;
-    transition: 250ms ease-in-out;
-    transition-property: all;
+  position: relative;
+  z-index: 1;
+  background: var(--purple-900);
+  border: 3px solid;
+  border-color: var(--purple-400);
+  border-radius: 0.75rem;
+  color: var(--purple-300);
+  padding: 0.75rem 1rem;
+  text-decoration: none;
+  transition: 250ms ease-in-out;
+  transition-property: all;
+  font-size: 1.5rem;
+}
+
+.button:hover,
+.button:focus {
+  color: var(--purple-200);
+  background-color: var(--purple-800);
+  transform: scale(1.1);
+  cursor: pointer;
+}
+
+.text {
+  filter: drop-shadow(0 0 1px currentcolor);
+}
+
+.button:after {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  inset: 0;
+  opacity: 0.6;
+  border-radius: inherit;
+  box-shadow: 0 0 1em 0.5em var(--purple-300);
+  transition: 250ms ease-in-out;
+  transition-property: opacity;
+}
+
+.button:hover::after,
+.button:focus::after {
+  opacity: 0.6;
+}
+
+dialog::backdrop {
+  background-color: black;
+  opacity: 0.7;
+}
+
+dialog {
+  background-color: #05031e;
+}
+#missingDigit div,
+#correctCode div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0.5rem 2rem 2rem 2rem;
+  font-size: 1.25rem;
+  background-color: black;
+  color: var(--purple-300);
+  margin: 0;
+  border: 4px solid snow;
+}
+
+#correctCode div {
+  width: 70dvw;
+  height: 70dvh;
+  justify-content: space-between;
+}
+
+#correctCodeText {
+  font-size: 10rem;
+  letter-spacing: 2rem;
+}
+@media screen and (max-width: 600px) {
+  #correctCodeText {
+    font-size: 3rem;
+    letter-spacing: 0.2rem;
+  }
+
+  .siffer {
+    width: 40px;
+    height: 40px;
+    max-width: 50px;
+    max-height: 50px;
+
+    margin: 0 0.25rem;
     font-size: 1.5rem;
+    text-align: center;
   }
-  
-  .button:hover,
-  .button:focus {
-    color: var(--purple-200);
-    background-color: var(--purple-800);
-    transform: scale(1.1);
-    cursor: pointer;
-  }
-  
-  .text {
-    filter: drop-shadow(0 0 1px currentcolor);
-  }
-  
-  .button:after {
-    content: "";
-    position: absolute;
-    z-index: -1;
-    inset: 0;
-    opacity: 0.6;
-    border-radius: inherit;
-    box-shadow: 0 0 1em 0.5em var(--purple-300);
-    transition: 250ms ease-in-out;
-    transition-property: opacity;
-  }
-  
-  .button:hover::after,
-  .button:focus::after {
-    opacity: 0.6;
-  }
+}
 
-  dialog::backdrop{
-    background-color: black;
-    opacity: 0.7;
-  }
-
-  dialog{
-    background-color: #05031e;
-  }
-  #missingDigit div, #correctCode div{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 0.5rem 2rem 2rem 2rem;
-    font-size: 1.25rem;
-    background-color: black;
-    color: var(--purple-300);
-    margin: 0;
-    border: 4px solid snow;
-  }
-  
-  #correctCode div{
-    width: 70dvw;
-    height: 70dvh;
-    justify-content: space-between;
-  }
-
-  #correctCodeText{
-    font-size: 10rem;
-    letter-spacing: 2rem;
-  }
-  @media screen and (max-width: 600px) {
-    #correctCodeText{
-        font-size: 3rem;
-        letter-spacing: .2rem;
-      }
-  }
-
-  #missingDigitOKButton, #correctCodeButton{
-    margin-top: 2rem;
-  }
+#missingDigitOKButton,
+#correctCodeButton {
+  margin-top: 2rem;
+}
